discussion/kv_engine/140896/140896_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge mad-hatter into master

* commit '58937d772':
  MB-42306 [2/2]: Bias db_data_size by estimate of completed prepares

Change-Id: Ie9c131bad5873cc0017a7904c9266a14ef5b07c3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-11-25 07:48:50.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2020-11-25 07:49:24.000000000
Message: 
Patch Set 2:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-25 08:02:49.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32059/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(482): error C2039: "ArenaClient": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32059/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27658/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5863/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32: error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.ArenaClient =
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5863/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5863/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6375/ : FAILURE

Compile error at [2020-11-25T07:51:08.622Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6375/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7300/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7414/ : FAILURE

Compile error at [2020-11-25T07:52:22.868Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: ?struct magma::Magma::Config? has no member named ?ArenaClient?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7414/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7674/ : FAILURE

Compile error at [2020-11-25T07:50:14.032Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7674/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15229/ : FAILURE

Compile error at [2020-11-25T07:54:43.209Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:482:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15229/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4397/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2020-11-25 10:39:47.000000000
Message: 
Patch Set 2:

Looks like this might need rebasing for magma stuff 😊
----------------------------------------------------------------------------------------------------------------------
